# sales-status-app

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .prettierrc  Dockerfile  alembic.ini  compose.example.yml  config.py  default.conf  deploy.sh  index.html  main.py  mime.types  nginx.conf  package-lock.json  package.json  requirements.txt  tsconfig.json  vite.config.ts
.husky/: pre-commit
alembic/: env.py
app/: database.py  main.py  models.py  tasks.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  compose.example.yml  pyproject.toml  requirements.txt
backend/app/: crud.py  main.py  models.py  schemas.py  tasks.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2023_11_26_1343-274e2be3c486_added_reference_to_comment_model.py  2024_03_23_1729-303234779878_added_inside_id.py  2024_03_24_1441-fc1a2d7b944f_changed_date_format.py  2024_05_26_0018-576e18c70852_removed_photourl_from_user_table_and_.py  2024_05_26_0039-b2cd48bc0e95_add_is_manager_column.py  2024_05_26_1235-be58f79435a6_add_busy_time_table_and_index_for_.py  2024_05_26_2057-20527eba50e7_add_relationship_between_user_and_status.py  2024_05_27_1844-50589cde20fc_add_is_deadline_required_column_to_.py  2024_05_28_1532-4f6dd67afea0_add_priority_to_status_model.py  2024_05_31_1143-8211a510b637_add_is_account_manager_to_user_model.py  2024_06_21_1356-41ffd096a143_added_mango_user_id_column_to_user_table.py  2024_07_14_2024-b0c9a057f5d8_removed_comment_table.py
backend/app/api/: auth_config.py  auth_manager.py  main.py
backend/app/api/routes/: auth.py  statuses.py  users.py  websockets.py
backend/app/core/: config.py  db.py
controllers/: user.py
frontend/: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  Dockerfile  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json
migrations/: env.py
model/: comment.py  database.py  status.py  task.py  user.py
src/: config.py  (+8 more)
(+489 files in other folders)
