[tool.poetry]
name = "sales-status-api"
version = "0.1.0"
description = ""
authors = ["Vadim Eryshev <yeryshev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
alembic = "^1.13.2"
gunicorn = "^22.0.0"
fastapi-users = { extras = ["sqlalchemy"], version = "^13.0.0" }
celery = { extras = ["redis"], version = "^5.4.0" }
flower = "^2.0.1"
requests = "^2.32.3"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.3.4"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]
